Fixed minor bug on mobile menu.

--- a/themes/navy/source/css/_partial/main.styl
+++ b/themes/navy/source/css/_partial/main.styl
@@ -208,7 +208,8 @@ select[multiple] {
   -o-transition: opacity 0.3s ease-in-out;
   transition: opacity 0.3s ease-in-out;
   max-width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: scroll;
   .mobile-menu-container-inner,
   .mobile-submenu-container-inner
     top: 16px;
